2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: added "plugdev" group to the descriptions list

2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in, parse.pl.in: look for wireless-essid, wireless-key,
	wireless-key1 and that kind of variations in debian when parsing
	/etc/network/interfaces

2004-11-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Makefile.am: moved the intltool-* files to DISTCLEANFILES.
	Fixes #158213

2004-11-12  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" (French) to ALL_LINGUAS.

2004-11-05  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in, partition.pl.in: added DVD support 

2004-11-05  Link Dupont  <link.dupont@gmail.com>

	* platform.pl.in: Added archlinux to the list
	* users-conf.in: added support for archlinux 0.7

2004-11-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* file.pl.in (gst_file_buffer_load): return a void array instead of
	undef if the file doesn't exist, it can be filled later. Fixes
	#157331

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-11-01  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in: fixed floppy drive detection

2004-10-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Makefile.am: delete the correct intltool-* files when making clean

2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>

	* configure.in: Added "id" (Indonesian) to ALL_LINGUAS
	* po/id.po: Added Indonesian translation

2004-10-17  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2004-09-29  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "tr" to ALL_LINGUAS.

2004-09-28  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-09-19  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: added "it" (Italian) to ALL_LINGUAS.

2004-09-18  Carlos Garcia Campos <carlosgc@gnome.org>
